--- a/Test/Test/Views/LojasIndice.xaml
+++ b/Test/Test/Views/LojasIndice.xaml
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Test.Lojas">
+             x:Class="Test.LojasIndice">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Lojas" />
+            <Label Text="LojasIndice" />
+            <Label Text="Loja 1"/>
+            <Label Text="Loja 2"/>
+            <Label Text="Loja 3!"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
