--- a/Test/Test/Index2.xaml
+++ b/Test/Test/Index2.xaml
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Test.Index"
-             BackgroundImage="">
-
+             x:Class="Test.Index2">
     <ContentPage.Content>
         <AbsoluteLayout>
             <Label Text="My OMB"
@@ -13,8 +11,8 @@
                    FontSize="Large"
                     HorizontalOptions= "Fill"
                     AbsoluteLayout.LayoutBounds=".5,0,1,.069" AbsoluteLayout.LayoutFlags="All"/>
-            <Button Text="Olá Manuel Gomes"
-                    x:Name="IndexBar"
+            <Button Text="Inicie sessão ou crie uma conta"
+                    x:Name="IndexProfile"
                     Style="{ StaticResource lightBlueButton}"
                     HorizontalOptions= "FillAndExpand"
                     Clicked="IndexPerfil_Clicked"
