--- a/Test/Test/Index2.xaml
+++ b/Test/Test/Index2.xaml
@@ -22,25 +22,25 @@
                     Clicked="IndexConsultas_Clicked"
                     Style="{StaticResource indexButton}"
                     HorizontalOptions="Start"
-                   AbsoluteLayout.LayoutBounds="0,.3,.5,.1" AbsoluteLayout.LayoutFlags="All"/>
+                  AbsoluteLayout.LayoutBounds=".8,.2,.5,.1" AbsoluteLayout.LayoutFlags="All"/>
             <Button Text="Cartão"
                     x:Name="IndexCartao"
                     Clicked="IndexCartao_Clicked"
                      Style="{StaticResource indexButton}"
                      HorizontalOptions="Start"
-                    AbsoluteLayout.LayoutBounds="0,.6,.5,.1" AbsoluteLayout.LayoutFlags="All"/>
+                    AbsoluteLayout.LayoutBounds="0,.5,.5,.1" AbsoluteLayout.LayoutFlags="All"/>
             <Button Text="Mundo OMB"
                     x:Name="IndexLojas"
                     Clicked="IndexLojas_Clicked"
                      Style="{StaticResource indexButton}"
                      HorizontalOptions="End"
-                    AbsoluteLayout.LayoutBounds="1,.6,.5,.1" AbsoluteLayout.LayoutFlags="All"/>
+                    AbsoluteLayout.LayoutBounds=".3,1,.5,.1" AbsoluteLayout.LayoutFlags="All"/>
             <Button Text="Compras"
                     x:Name="IndexCompras"
                     Clicked="IndexCompras_Clicked"
                      Style="{StaticResource indexButton}"
                      HorizontalOptions="End"
-                    AbsoluteLayout.LayoutBounds="1,.3,.5,.1" AbsoluteLayout.LayoutFlags="All"/>
+                   AbsoluteLayout.LayoutBounds="1,.5,.5,.1" AbsoluteLayout.LayoutFlags="All"/>
         </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
