--- a/Test/Test/Lojas.xaml
+++ b/Test/Test/Lojas.xaml
@@ -15,6 +15,7 @@
                     AbsoluteLayout.LayoutBounds="0,.3,.5,.1" AbsoluteLayout.LayoutFlags="All"
                     Clicked="LojasIndice_Clicked"/>
             <Button Text="Serviços/Produtos"
+                    Clicked="Serviços_Clicked"
                      Style="{StaticResource indexButton}"
                      HorizontalOptions="Start"
                     AbsoluteLayout.LayoutBounds="0,.6,.5,.1" AbsoluteLayout.LayoutFlags="All"/>
